# deepdrivemd

./: setup.cfg
deepdrivemd/: __init__.py  api.py  parsl.py
deepdrivemd/apps/cvae_inference/: app.py
deepdrivemd/apps/cvae_train/: app.py
deepdrivemd/workflows/: openmm_cvae.py  openmm_cvae_stream.py
examples/bba-folding-proxystream/: cvae-prod-settings.yaml  prod.yaml  test.yaml
requirements/: requirements.txt
scripts/: bba-scaling-baseline.pbs  bba-scaling-proxystream.pbs
